# Bloomi

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: backend-ci.yml  eas-build.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: errors.py  events.py  logging.py
app/models/: __init__.py  analytics.py  base.py  catalog.py  companion.py  notifications.py  practice.py  user.py  wallet.py
app/routers/: checkins.py  companion.py  goals.py  home.py  journal.py  onboarding.py  shop.py
app/schemas/: checkins.py  common.py  companion.py  goals.py  home.py  journal.py  onboarding.py  shop.py
app/services/: checkins.py  companion.py  event_log.py  goals.py  home_state.py  journal.py  onboarding.py  rewards.py  shop.py
mobile/: .gitignore  MANUS_BUILD.md  app.json  eas.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mobile/app/: _layout.tsx  checkin.tsx  index.tsx
mobile/app/onboarding/: _layout.tsx  archetype.tsx  choose.tsx  goals.tsx  name.tsx
mobile/app/tabs/: _layout.tsx  goals.tsx  index.tsx  insights.tsx  journal.tsx  shop.tsx
mobile/assets/: README.md
mobile/plugins/: with-fix-expo-package-import.js
mobile/src/api/: client.ts
mobile/src/constants/: colors.ts  theme.ts
mobile/src/hooks/: useCheckin.ts  useCompanion.ts  useGoals.ts  useHomeState.ts  useJournal.ts  useShop.ts
mobile/src/store/: authStore.ts  (+1 more)
scripts/: seed.py
tests/: conftest.py  test_checkins.py  test_goals.py  test_health.py  test_onboarding.py
(+5 files in other folders)
